all merged base code. configuration attribute null issue exist and gcs upload configuration is issue

--- a/.env.example
+++ b/.env.example
@@ -19,9 +19,10 @@ TOKEN_TIMEOUT=30
 # ===================
 # SMTP Configuration
 # ===================
-SMTP_SERVER=mailhog
+SMTP_SERVER=localhost
 SMTP_PORT=1025
 SMTP_EMAIL=noreply@easylife.local
+SMTP_PASSWORD=
 # For production, use real SMTP:
 # SMTP_SERVER=smtp.gmail.com
 # SMTP_PORT=587
