--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,6 +26,13 @@ psutil>=5.9.0
 pandas>=2.0.0
 openpyxl>=3.1.0
 
+# Cloud Storage (optional)
+google-cloud-storage>=2.14.0
+
+# Password hashing
+passlib[bcrypt]>=1.7.0
+bcrypt>=4.0.0
+
 # CORS
 # (included in fastapi)
 
