--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,134 +1,54 @@
 version: '3.8'
 
-# Development Docker Compose - includes hot reload and dev tools
+# Development override for docker-compose.yml
+# Usage: docker-compose -f docker-compose.yml -f docker-compose.dev.yml up
 
 services:
-  # MongoDB Database
+  # MongoDB - No auth in dev for simplicity
   mongodb:
-    image: mongo:7.0
-    container_name: easylife-mongodb-dev
-    restart: unless-stopped
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password123
-      MONGO_INITDB_DATABASE: easylife_auth
-    volumes:
-      - mongodb_data_dev:/data/db
-      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-    ports:
-      - "27017:27017"
-    networks:
-      - easylife-network-dev
-    healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+      MONGO_INITDB_ROOT_USERNAME: ""
+      MONGO_INITDB_ROOT_PASSWORD: ""
 
-  # Backend API (FastAPI) with hot reload
+  # Backend with hot reload
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile.dev
-    container_name: easylife-backend-dev
-    restart: unless-stopped
     environment:
-      MONGODB_SCHEME: mongodb
-      MONGODB_USERNAME: admin
-      MONGODB_PASSWORD: password123
-      MONGODB_HOST: mongodb:27017
-      MONGODB_DATABASE: easylife_auth
-      JWT_SECRET_KEY: dev-secret-key-not-for-production
-      EASYLIFE_SPECS_AUTH_TOKEN_TIMEOUT: 60
-      SMTP_SERVER: mailpit
-      SMTP_PORT: 1025
-      SMTP_EMAIL: noreply@easylife.local
-      WEBAPP_HOST: http://localhost:5173/
-      CORS_ORIGINS: http://localhost:5173,http://localhost:3000
-      ENVIRONMENT: development
+      MONGODB_USERNAME: ""
+      MONGODB_PASSWORD: ""
       ENV: development
+      CORS_ORIGINS: http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000,http://127.0.0.1:5173
     volumes:
       - ./backend:/app
-      - /app/__pycache__
-    ports:
-      - "8000:8000"
-    depends_on:
-      mongodb:
-        condition: service_healthy
-    networks:
-      - easylife-network-dev
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
 
-  # Frontend (Vite dev server) - Use Nginx reverse proxy for API
+  # Frontend with Vite dev server
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile.dev
-    container_name: easylife-frontend-dev
-    restart: unless-stopped
-    volumes:
-      - ./frontend/src:/app/src
-      - ./frontend/public:/app/public
-      - ./frontend/index.html:/app/index.html
     ports:
-      - "5173:5173"
+      - "3000:5173"
+    environment:
+      # Proxy target for Vite dev server (uses Docker network hostname)
+      VITE_PROXY_TARGET: http://backend:8000
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    command: npm run dev -- --host 0.0.0.0
     depends_on:
       - backend
-    networks:
-      - easylife-network-dev
 
-  # Nginx reverse proxy (for development - handles API proxying)
-  nginx-proxy:
-    image: nginx:alpine
-    container_name: easylife-nginx-dev
-    restart: unless-stopped
-    volumes:
-      - ./nginx-dev.conf:/etc/nginx/conf.d/default.conf:ro
-    ports:
-      - "3000:80"
-    depends_on:
-      - frontend
-      - backend
-    networks:
-      - easylife-network-dev
-
-  # Mailpit - Email testing (replacement for deprecated MailHog)
+  # Enable dev tools (remove profile restriction)
   mailpit:
-    image: axllent/mailpit:latest
-    container_name: easylife-mailpit-dev
-    restart: unless-stopped
-    ports:
-      - "1025:1025"   # SMTP
-      - "8025:8025"   # Web UI
-    environment:
-      MP_SMTP_AUTH_ACCEPT_ANY: 1
-      MP_SMTP_AUTH_ALLOW_INSECURE: 1
-    networks:
-      - easylife-network-dev
+    profiles: []
 
-  # Mongo Express - Database UI
   mongo-express:
-    image: mongo-express:latest
-    container_name: easylife-mongo-express-dev
-    restart: unless-stopped
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
-      ME_CONFIG_MONGODB_ADMINPASSWORD: password123
-      ME_CONFIG_MONGODB_URL: mongodb://admin:password123@mongodb:27017/
-      ME_CONFIG_BASICAUTH_USERNAME: admin
-      ME_CONFIG_BASICAUTH_PASSWORD: admin123
-    ports:
-      - "8081:8081"
-    depends_on:
-      mongodb:
-        condition: service_healthy
-    networks:
-      - easylife-network-dev
-
-networks:
-  easylife-network-dev:
-    driver: bridge
-
-volumes:
-  mongodb_data_dev:
-    driver: local
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ""
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ""
+      ME_CONFIG_MONGODB_URL: mongodb://mongodb:27017/
+      ME_CONFIG_BASICAUTH: "false"
+    profiles: []
