reacr-19 router 7 update

--- a/.env.example
+++ b/.env.example
@@ -45,8 +45,7 @@ FRONTEND_PORT=3000
 # ===================
 # Development Tools (optional)
 # ===================
-MAILHOG_SMTP_PORT=1025
-MAILHOG_WEB_PORT=8025
-MONGO_EXPRESS_PORT=8081
-MONGO_EXPRESS_USERNAME=admin
-MONGO_EXPRESS_PASSWORD=admin123
+SMTP_SERVER=mailpit
+SMTP_PORT=1025
+SMTP_EMAIL=noreply@easylife.local
+SMTP_PASSWORD=
