--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -4,7 +4,7 @@ FROM python:3.11-slim
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
-ENV PYTHONPATH=/app
+ENV PYTHONPATH=/app:/app/src
 
 # Set work directory
 WORKDIR /app
@@ -28,4 +28,4 @@ COPY . .
 EXPOSE 8000
 
 # Run with hot reload
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
