--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,16 @@ BACKEND_PORT=8000
 FRONTEND_PORT=3000
 
 # ===================
+# Jira Integration (optional)
+# ===================
+# Get API token from: https://id.atlassian.com/manage-profile/security/api-tokens
+JIRA_BASE_URL=https://your-domain.atlassian.net
+JIRA_EMAIL=your-email@example.com
+JIRA_API_TOKEN=your-jira-api-token
+JIRA_PROJECT_KEY=SCEN
+JIRA_ISSUE_TYPE=Task
+
+# ===================
 # Development Tools (optional)
 # ===================
 SMTP_SERVER=mailpit
