--- a/backend/.env.example
+++ b/backend/.env.example
@@ -31,6 +31,14 @@ LOCAL_UPLOAD_PATH=/tmp/easylife_uploads
 GCS_CREDENTIALS_JSON={}
 GCS_BUCKET_NAME=your-bucket-name
 
+# Jira Integration Configuration (Optional)
+# Get API token from: https://id.atlassian.com/manage-profile/security/api-tokens
+JIRA_BASE_URL=https://your-domain.atlassian.net
+JIRA_EMAIL=your-email@example.com
+JIRA_API_TOKEN=your-jira-api-token
+JIRA_PROJECT_KEY=SCEN
+JIRA_ISSUE_TYPE=Task
+
 # CORS Configuration (Optional)
 # Comma-separated list of allowed origins
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
