--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -36,6 +36,9 @@ bcrypt>=4.0.0
 # CORS
 # (included in fastapi)
 
+# Jira Integration
+jira>=3.5.0
+
 # Testing
 pytest>=7.4.0
 pytest-asyncio>=0.23.0
