--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,17 @@ MONGODB_USERNAME=admin
 MONGODB_PASSWORD=password
 MONGODB_DATABASE=easylife_auth
 
+# MongoDB Connection Pool Settings (Optional - defaults shown)
+# These settings help maintain connections and auto-reconnect after idle periods
+MONGODB_MAX_POOL_SIZE=50
+MONGODB_MIN_POOL_SIZE=5
+MONGODB_MAX_IDLE_TIME_MS=300000
+MONGODB_SERVER_SELECTION_TIMEOUT_MS=30000
+MONGODB_CONNECT_TIMEOUT_MS=20000
+MONGODB_SOCKET_TIMEOUT_MS=60000
+MONGODB_HEARTBEAT_FREQUENCY_MS=10000
+MONGODB_WAIT_QUEUE_TIMEOUT_MS=10000
+
 # JWT Configuration
 JWT_SECRET_KEY=your-super-secret-key-change-in-production-use-openssl-rand-hex-32
 
@@ -42,6 +53,11 @@ JIRA_ISSUE_TYPE=Task
 # CORS Configuration (Optional)
 # Comma-separated list of allowed origins
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# Email Distribution Lists (Optional)
+# Default distribution list for scenario request notifications
+# Comma-separated list of email addresses
+SCENARIO_REQUEST_DISTRIBUTION_LIST=admin@example.com,team@example.com
 
 # Environment
 ENV=development
