--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,9 +9,10 @@ ENV PYTHONPATH=/app:/app/src
 # Set work directory
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies including tini for proper signal handling
 RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
+    tini \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
@@ -29,9 +30,15 @@ USER appuser
 # Expose port
 EXPOSE 8000
 
+# Use SIGTERM for graceful shutdown
+STOPSIGNAL SIGTERM
+
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/api/v1/health/live')" || exit 1
 
-# Run the application
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Use tini as init system for proper signal handling
+ENTRYPOINT ["/usr/bin/tini", "--"]
+
+# Run the application with timeout for graceful shutdown
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--timeout-graceful-shutdown", "5"]
