team name and assignee added

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -49,6 +49,12 @@ JIRA_EMAIL=your-email@example.com
 JIRA_API_TOKEN=your-jira-api-token
 JIRA_PROJECT_KEY=SCEN
 JIRA_ISSUE_TYPE=Task
+# Default team for scenario requests (optional)
+JIRA_DEFAULT_TEAM=Dev Team
+# Default assignee accountId for scenario requests (optional)
+JIRA_DEFAULT_ASSIGNEE=
+# Default assignee display name (optional)
+JIRA_DEFAULT_ASSIGNEE_NAME=
 
 # CORS Configuration (Optional)
 # Comma-separated list of allowed origins
