--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -35,6 +35,19 @@ server {
         proxy_read_timeout 90;
     }
 
+    # Proxy Explorer (dashboard) requests
+    location /explorer/ {
+        proxy_pass http://easylife-dashboard:80/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
