--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -4,7 +4,7 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 asyncio_mode = auto
-addopts = -v --cov=src/easylifeauth --cov-report=term-missing --cov-report=html --cov-fail-under=100
+addopts = -v --cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=95
 filterwarnings =
     ignore::DeprecationWarning
     ignore::UserWarning
