--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,47 +1,45 @@
 # FastAPI and server
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-python-multipart>=0.0.6
+fastapi>=0.110.0,<1.0.0
+uvicorn[standard]>=0.30.0,<1.0.0
+python-multipart>=0.0.12,<1.0.0
 
 # Database - Motor for async MongoDB
-motor>=3.3.0
+motor>=3.3.0,<4.0.0
 
 # Authentication
-pyjwt>=2.8.0
-werkzeug>=3.0.0
-python-jose[cryptography]>=3.3.0
+pyjwt>=2.8.0,<3.0.0
+werkzeug>=3.0.0,<4.0.0
 
 # Email - async
-aiosmtplib>=3.0.0
+aiosmtplib>=3.0.0,<6.0.0
 
 # Validation
-pydantic>=2.5.0
-email-validator>=2.0.0
+pydantic>=2.5.0,<3.0.0
+email-validator>=2.0.0,<3.0.0
 
 # Utilities
-python-dotenv>=1.0.0
-psutil>=5.9.0
+python-dotenv>=1.0.0,<2.0.0
+psutil>=5.9.0,<8.0.0
 
 # File processing
-pandas>=2.0.0
-openpyxl>=3.1.0
+pandas>=2.0.0,<4.0.0
+openpyxl>=3.1.0,<4.0.0
 
 # Cloud Storage (optional)
-google-cloud-storage>=2.14.0
+google-cloud-storage>=2.14.0,<4.0.0
 
 # Password hashing
-passlib[bcrypt]>=1.7.0
-bcrypt>=4.0.0
+bcrypt>=4.0.0,<6.0.0
 
 # CORS
 # (included in fastapi)
 
 # Jira Integration
-jira>=3.5.0
+jira>=3.5.0,<4.0.0
 
 # Testing
-pytest>=7.4.0
-pytest-asyncio>=0.23.0
-pytest-cov>=4.1.0
-httpx>=0.25.0
-aiohttp>=3.9.0
+pytest>=7.4.0,<10.0.0
+pytest-asyncio>=0.23.0,<2.0.0
+pytest-cov>=4.1.0,<8.0.0
+httpx>=0.25.0,<1.0.0
+aiohttp>=3.9.0,<4.0.0
